--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,8 +308,31 @@ nav .menuSite ul li .menuSub li a:hover{
 .slide-destaque .slide .col-2 img{
     width: 80%;
     height: auto;
-
 }
+.slide-destaque .slide .col-3{
+    display: none;
+    flex-direction: column;
+    background-color: rgba(128, 128, 128, 0.466);
+    flex: 1 1 20rem;
+    width: 100%;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 1rem;
+}
+.slide-destaque .slide .col-3 p{
+    font-size: 1rem;
+    color: var(--cor-branca);
+    text-transform: capitalize;
+    letter-spacing: 3px;
+    margin: 1rem;
+}
+.slide-destaque .slide .col-3 p span{
+    color: var(--cor-escura);
+}
+.slide-destaque .slide .col-3 p i{
+    color: var(--cor-escura);
+}
+
 .slide-destaque .swiper [class^="swiper-button-"]{
     color: var(--cor-branca);
     background: rgba(211, 13, 13, 0.5);
